# Camera2Magic

./: .gitignore  README.md  README_EN.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml  cpp
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  hooker.h  platform_magic.cpp  platform_magic.h  thread_safe_queue.h
app/src/main/cpp/buffer/: pbo_buffer.cpp  pbo_buffer.h
app/src/main/cpp/camera/: camera_state.cpp  camera_state.h
app/src/main/cpp/egl/: egl_context.cpp  egl_context.h
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/media/: media_handle.cpp  media_handle.h
app/src/main/cpp/render/: double_buffer.cpp  double_buffer.h  texture_copier.cpp  texture_copier.h
app/src/main/cpp/surface/: surface_texture.cpp  surface_texture.h
app/src/main/cpp/utils/: log_utils.h  magic_config.cpp  magic_config.h  matrix_utils.cpp  matrix_utils.h  work_mode.h
app/src/main/cpp/yuv/: async_yuv_converter.cpp  async_yuv_converter.h  yuv_converter.cpp  yuv_converter.h  yuv_types.h
app/src/main/java/com/nothing/camera2magic/: MagicEntry.kt  MainActivity.kt
app/src/main/java/com/nothing/camera2magic/hook/: Camera1Hook.kt  Camera2Hook.kt  CameraState.kt  FloatWindowManager.kt  MagicCamera1.kt  MagicCamera2.kt  MagicNative.kt  PreviewNV21Helper.kt  UIUtils.kt
app/src/main/java/com/nothing/camera2magic/utils/: Dog.kt  FloatWindowManager.kt  PreviewNV21Helper.kt
app/src/main/java/com/nothing/camera2magic/view/: IconManager.kt  SettingsView.kt  SpotlightView.kt
app/src/main/java/com/nothing/camera2magic/viewmodel/: CompositionLocals.kt  SettingsViewModel.kt  SpotlightViewModel.kt  ViewModelFactory.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
document/: workflow.md
gradle/: libs.versions.toml
(+1 files in other folders)
